--- a/conv_autoencoder/conv_autoencoder.ipynb
+++ b/conv_autoencoder/conv_autoencoder.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,14 +140,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Model: \"model\"\n_________________________________________________________________\nLayer (type)                 Output Shape              Param #   \n=================================================================\ninput_1 (InputLayer)         [(None, 28, 28, 1)]       0         \n_________________________________________________________________\nconv2d (Conv2D)              (None, 28, 28, 16)        160       \n_________________________________________________________________\nmax_pooling2d (MaxPooling2D) (None, 14, 14, 16)        0         \n_________________________________________________________________\nconv2d_1 (Conv2D)            (None, 14, 14, 8)         1160      \n_________________________________________________________________\nmax_pooling2d_1 (MaxPooling2 (None, 7, 7, 8)           0         \n_________________________________________________________________\nconv2d_2 (Conv2D)            (None, 7, 7, 8)           584       \n_________________________________________________________________\nmax_pooling2d_2 (MaxPooling2 (None, 4, 4, 8)           0         \n_________________________________________________________________\nconv2d_3 (Conv2D)            (None, 4, 4, 8)           584       \n_________________________________________________________________\nup_sampling2d (UpSampling2D) (None, 8, 8, 8)           0         \n_________________________________________________________________\nconv2d_4 (Conv2D)            (None, 8, 8, 8)           584       \n_________________________________________________________________\nup_sampling2d_1 (UpSampling2 (None, 16, 16, 8)         0         \n_________________________________________________________________\nconv2d_5 (Conv2D)            (None, 16, 16, 16)        1168      \n_________________________________________________________________\nup_sampling2d_2 (UpSampling2 (None, 32, 32, 16)        0         \n_________________________________________________________________\nconv2d_6 (Conv2D)            (None, 32, 32, 1)         145       \n=================================================================\nTotal params: 4,385\nTrainable params: 4,385\nNon-trainable params: 0\n_________________________________________________________________\n"
+      "Model: \"model_1\"\n_________________________________________________________________\nLayer (type)                 Output Shape              Param #   \n=================================================================\ninput_2 (InputLayer)         [(None, 28, 28, 1)]       0         \n_________________________________________________________________\nconv2d_7 (Conv2D)            (None, 28, 28, 16)        160       \n_________________________________________________________________\nmax_pooling2d_3 (MaxPooling2 (None, 14, 14, 16)        0         \n_________________________________________________________________\nconv2d_8 (Conv2D)            (None, 14, 14, 8)         1160      \n_________________________________________________________________\nmax_pooling2d_4 (MaxPooling2 (None, 7, 7, 8)           0         \n_________________________________________________________________\nconv2d_9 (Conv2D)            (None, 7, 7, 8)           584       \n_________________________________________________________________\nmax_pooling2d_5 (MaxPooling2 (None, 4, 4, 8)           0         \n_________________________________________________________________\nconv2d_10 (Conv2D)           (None, 4, 4, 8)           584       \n_________________________________________________________________\nup_sampling2d_3 (UpSampling2 (None, 8, 8, 8)           0         \n_________________________________________________________________\nconv2d_11 (Conv2D)           (None, 8, 8, 8)           584       \n_________________________________________________________________\nup_sampling2d_4 (UpSampling2 (None, 16, 16, 8)         0         \n_________________________________________________________________\nconv2d_12 (Conv2D)           (None, 14, 14, 16)        1168      \n_________________________________________________________________\nup_sampling2d_5 (UpSampling2 (None, 28, 28, 16)        0         \n_________________________________________________________________\nconv2d_13 (Conv2D)           (None, 28, 28, 1)         145       \n=================================================================\nTotal params: 4,385\nTrainable params: 4,385\nNon-trainable params: 0\n_________________________________________________________________\n"
      ]
     }
    ],
